--- a/Reda75/template_cv/index.html
+++ b/Reda75/template_cv/index.html
@@ -74,7 +74,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Bonjour, le monde.</h5>
-	   			<h1>Naouel ABDAT.</h1>
+	   			<h1>Reda BENLAKEHAL.</h1>
 
 	   			<p class="intro-position">
 	   				<span>Développeuse Web/Mobile</span>
@@ -113,7 +113,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Actuellement étudiante en licence professionnelle informatique parcours objets communicants et intelligents à l’université Paris 8-Vincennes, et je suis titulaire d’un baccalauréat Mathématique obtenu en 2014 et d’une Licence en Automatique obtenue en 2017.Et je suis à la recherche active d’un stage pratique en développement mobile . </p>
+   				<p class="lead">Actuellement étudiant en licence professionnelle informatique parcours objets communicants et intelligents à l’université Paris 8-Vincennes, et je suis titulaire d’un baccalauréat Mathématique obtenu en 2014 et d’une Licence en Automatique obtenue en 2017.Et je suis à la recherche active d’un stage pratique en développement mobile . </p>
    			</div>   			
 
    		</div>   		
@@ -129,11 +129,11 @@
    			<ul class="info-list">
    				<li>
    					<strong>Nom complet:</strong>
-   					<span>Naouel ABDAT</span>
+   					<span>Reda BENLAKEHAL</span>
    				</li>
    				<li>
    					<strong>Date de naissance:</strong>
-   					<span>Juin 10, 1995</span>
+   					<span>Mai 23, 1996</span>
    				</li>
    				<li>
    					<strong>Emploi:</strong>
@@ -141,7 +141,7 @@
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>naouelabdat1995@gmail.com</span>
+   					<span>redhabenlakehal@hotmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -156,7 +156,7 @@
 				<ul class="skill-bars">
 				<li>
 				   	<strong>Langues :</strong>
-					<span>Anglais (Technique), Français (Bilingue), Kabyle (Langue Maternelle)</span>
+					<span>Anglais (Technique), Français (Bilingue)</span>
 				   </li>
 				   <li>
 				   	<strong>Langages informatiques :</strong>
@@ -164,7 +164,7 @@
 				   </li>
 				   <li>
 				   	<strong>Développement web :</strong>
-					<span>PHP, SQL, HTML/CSS</span>
+					<span>PHP, SQL, HTML/CSS, Angular</span>
 				   </li>
 				   <li>
 				   	<strong>Logiciels /Outils :</strong>
@@ -257,7 +257,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Université Paris 8 Vincennes-Saint-Denis</h4>
-	   					<p>Développement mobile, Android avec Kotlin et iOS avec objective-c.</p>
+	   					<p>Développement mobile, Android avec Kotlin et iOS avec objective-c et Swift.</p>
 	   				</div>
 					<div class="timeline-block">
 
@@ -700,7 +700,7 @@
 
    			<h5>Mon Email :</h5>
 
-   			<p>naouelabdat1995@gmail.com<br>		     
+   			<p>redhabenlakehal@hotmail.com<br>		     
 			   </p>
 
    		</div>
